增加微博地址

--- a/_config.yml
+++ b/_config.yml
@@ -127,6 +127,7 @@ social:
   #LinkLabel: Link
   Twitter: https://twitter.com/ajason0622
   Instagram: https://www.instagram.com/ajason0622/
+  Weibo: http://weibo.com/ajason622
 
 
 # Social Links Icons
