新建测试页

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ menu:
   #categories: /categories
   #about: /about
   archives: /archives
+  test: /test.html
   #tags: /tags
   #schedule: /schedule
   #commonweal: /404.html
